[gd_scene load_steps=3 format=3 uid="uid://cr14hsgu5xxy8"]

[ext_resource type="Theme" uid="uid://b288c5n3b1ipm" path="res://MainUITheme.tres" id="1_6qxxk"]
[ext_resource type="Script" uid="uid://bo517mucikopt" path="res://Prefabs/ListInputPopup/list_input_popup.gd" id="1_pamad"]

[node name="ListInputPopup" type="Control"]
z_index = 20
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6qxxk")
script = ExtResource("1_pamad")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Box" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = 264.0
offset_right = 500.0
offset_bottom = 608.0
grow_horizontal = 2
color = Color(0.0980392, 0.101961, 0.196078, 1)

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 64.0
offset_top = 288.0
offset_right = -64.0
offset_bottom = 448.0
grow_horizontal = 2
placeholder_text = "input ya fuckin string here"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 464.0
offset_right = 1016.0
offset_bottom = 584.0
theme_override_constants/separation = 58
alignment = 1

[node name="AddToStart" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(273, 0)
layout_mode = 2
text = "Add To Start"

[node name="AddToMiddle" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(290, 0)
layout_mode = 2
text = "Add To Middle"

[node name="AddToEnd" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(273, 0)
layout_mode = 2
text = "Add To End"

[connection signal="pressed" from="HBoxContainer/AddToStart" to="." method="_on_add_to_start_pressed"]
[connection signal="pressed" from="HBoxContainer/AddToMiddle" to="." method="_on_add_to_middle_pressed"]
[connection signal="pressed" from="HBoxContainer/AddToEnd" to="." method="_on_add_button_pressed"]
